--- a/index.html
+++ b/index.html
@@ -5,7 +5,40 @@
   <title>Landing Page</title>
  </head>
 <body>
+<header>
+    <img src="./images/logo.jpg" width="75" alt="logo"/>
+</header>
+ <ul>
+    <li><a href="index.html">header link 1</a></li>
+    <li><a href="index.html">header link 2</a></li>
+    <li><a href=index.html>header link 3</a></li>
+ </ul>
 
+<h1>The Stars At Night!</h1>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras vel nisl sed ex pharetra viverra. Ut ultrices placerat interdum.</p>
+<!--style sign up in css as button-->
+<a href="index.html">Sign up</a>
+<img src="./images/hero-night.jpg" width="150" alt="spectacular stars in the nights sky"/>
+
+<h3>Some random information</h3>
+<img src="./images/night1.jpg" width="100" alt="night sky"/>
+<p>Nam efficitur feugiat enim, vitae gravida nunc pellentesque non.</p>
+<img src="./images/night2.jpg" width="100" alt="beautiful stars reflected by the river"/>
+<p>Nam efficitur feugiat enim, vitae gravida nunc pellentesque non.</p>
+<img src="./images/night3.jpg" width="100" alt="tree surrounded by stars"/>
+<p>Nam efficitur feugiat enim, vitae gravida nunc pellentesque non.</p>
+<img src="./images/night4.jpg" width="100" alt="river reflecting the stars above"/>
+<p>Nam efficitur feugiat enim, vitae gravida nunc pellentesque non.</p>
+
+<p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All i know is that it looks nice.</p>
+<p>Thor, God of Thunder</p>
+
+<h2>Call to action! It's time!</h2>
+<p>Sign up for our product by clicking that button right over there!</p>
+<a href="index.html">Sign up</a> <!--style sign up in css as button-->
+<footer>
+    <p>Copyright © The Odin Project 2023</p>
+</footer>
 
 </body>
 </html>
