Applied styles to index.html Working on modifying header section using flex box for alignment.

--- a/index.html
+++ b/index.html
@@ -2,38 +2,44 @@
 <html lang="en">
  <head>
   <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Landing Page</title>
+  <link rel="stylesheet" href="style.css">
  </head>
 <body>
-<header>
-    <img src="./images/logo.jpg" width="75" alt="logo"/>
-</header>
- <ul>
-    <li><a href="index.html">header link 1</a></li>
-    <li><a href="index.html">header link 2</a></li>
-    <li><a href=index.html>header link 3</a></li>
- </ul>
-
-<h1>The Stars At Night!</h1>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras vel nisl sed ex pharetra viverra. Ut ultrices placerat interdum.</p>
-<!--style sign up in css as button-->
-<a href="index.html">Sign up</a>
-<img src="./images/hero-night.jpg" width="150" alt="spectacular stars in the nights sky"/>
-
+      
+     <div class="hero-header">
+        <div class="headlogo"><header><h4 class="headerlogo">Header Logo</h4></header>
+         <ul>
+            <li><a href="index.html">header link one</a></li>
+            <li><a href="index.html">header link two</a></li>
+            <li><a href=index.html>header link three</a></li>
+         </ul>
+        </div>    
+     <div class="hero-section">
+            <div class="hero-content">
+                <h1 class="hero-main">The Stars At Night!</h1>
+                <div class="hero-text"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras vel nisl sed ex pharetra viverra. Ut ultrices placerat interdum.</p></div>
+                <button class="sign-up"><a href="index.html">Sign up</a></button>
+            </div>     
+        <img class="hero-image" src="./images/hero-night.jpg" alt="spectacular stars in the nights sky"/>    
+     </div>
+    </div>
 <h3>Some random information</h3>
-<img src="./images/night1.jpg" width="100" alt="night sky"/>
+<img class="small" src="./images/night1.jpg" alt="night sky"/>
 <p>Nam efficitur feugiat enim, vitae gravida nunc pellentesque non.</p>
-<img src="./images/night2.jpg" width="100" alt="beautiful stars reflected by the river"/>
+<img class="small" src="./images/night2.jpg" alt="beautiful stars reflected by the river"/></div>
 <p>Nam efficitur feugiat enim, vitae gravida nunc pellentesque non.</p>
-<img src="./images/night3.jpg" width="100" alt="tree surrounded by stars"/>
+<img class="small" src="./images/night3.jpg" alt="tree surrounded by stars"/></div>
 <p>Nam efficitur feugiat enim, vitae gravida nunc pellentesque non.</p>
-<img src="./images/night4.jpg" width="100" alt="river reflecting the stars above"/>
+<img class="small" src="./images/night4.jpg" alt="cabin surrounded by mountains and stars"/></div>
 <p>Nam efficitur feugiat enim, vitae gravida nunc pellentesque non.</p>
 
 <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All i know is that it looks nice.</p>
 <p>Thor, God of Thunder</p>
 
-<h2>Call to action! It's time!</h2>
+<h4>Call to action! It's time!</h4>
 <p>Sign up for our product by clicking that button right over there!</p>
 <a href="index.html">Sign up</a> <!--style sign up in css as button-->
 <footer>
