--- a/index.html
+++ b/index.html
@@ -17,34 +17,48 @@
             <li><a href=index.html>header link three</a></li>
          </ul>
         </div>    
-     <div class="hero-section">
+      <div class="hero-section">
             <div class="hero-content">
-                <h1 class="hero-main">The Stars At Night!</h1>
-                <div class="hero-text"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras vel nisl sed ex pharetra viverra. Ut ultrices placerat interdum.</p></div>
+                <h1 class="hero-main">This website is awesome</h1>
+                <div class="hero-text"><p>This website has some subtext that goes here under the main title. It's smaller font and color is lower contrast</p></div>
                 <button class="sign-up"><a href="index.html">Sign up</a></button>
             </div>     
         <img class="hero-image" src="./images/hero-night.jpg" alt="spectacular stars in the nights sky"/>    
-     </div>
+      </div>
     </div>
-<h3>Some random information</h3>
-<img class="small" src="./images/night1.jpg" alt="night sky"/>
-<p>Nam efficitur feugiat enim, vitae gravida nunc pellentesque non.</p>
-<img class="small" src="./images/night2.jpg" alt="beautiful stars reflected by the river"/></div>
-<p>Nam efficitur feugiat enim, vitae gravida nunc pellentesque non.</p>
-<img class="small" src="./images/night3.jpg" alt="tree surrounded by stars"/></div>
-<p>Nam efficitur feugiat enim, vitae gravida nunc pellentesque non.</p>
-<img class="small" src="./images/night4.jpg" alt="cabin surrounded by mountains and stars"/></div>
-<p>Nam efficitur feugiat enim, vitae gravida nunc pellentesque non.</p>
+  
+        <h3 class="random-info">Some random information</h3>
+<div class="content">         
+    <div class="information">    
+        <img class="small" src="./images/night1.jpg" alt="night sky"/>
+        <p class="subtext">this is some subtext under an illustration or image</p>
+    </div>
+    <div class="information"> 
+        <img class="small" src="./images/night2.jpg" alt="beautiful stars reflected by the river"/>
+        <p class="subtext">this is some subtext under an illustration or image</p>
+    </div>
+    <div class="information"> 
+        <img class="small" src="./images/night3.jpg" alt="tree surrounded by stars"/>
+        <p class="subtext">this is some subtext under an illustration or image</p>
+    </div>
+    <div class="information"> 
+        <img class="small" src="./images/night4.jpg" alt="cabin surrounded by mountains and stars"/>
+        <p class="subtext">this is some subtext under an illustration or image</p>
+    </div>
+</div>  
+    <div class="quoteblock">
+        <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All i know is that it looks nice.</p>
+        <p class="quote-thor">Thor, God of Thunder</p>
+    </div>    
+    <div class="call-to-action">
+        <h4>Call to action! It's time!</h4>
+        <p>Sign up for our product by clicking that button right over there!</p>
+        <a href="index.html">Sign up</a> <!--style sign up in css as button-->
+    </div>
+    <footer>
+        <p>Copyright © The Odin Project 2023</p>
+    </footer>
 
-<p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All i know is that it looks nice.</p>
-<p>Thor, God of Thunder</p>
-
-<h4>Call to action! It's time!</h4>
-<p>Sign up for our product by clicking that button right over there!</p>
-<a href="index.html">Sign up</a> <!--style sign up in css as button-->
-<footer>
-    <p>Copyright © The Odin Project 2023</p>
-</footer>
 
 </body>
 </html>
