--- a/index.html
+++ b/index.html
@@ -49,16 +49,16 @@
     <div class="quoteblock">
         <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All i know is that it looks nice.</p>
         <p class="quote-thor">Thor, God of Thunder</p>
-    </div>    
-    <div class="call-to-action">
-        <h4>Call to action! It's time!</h4>
-        <p>Sign up for our product by clicking that button right over there!</p>
-        <a href="index.html">Sign up</a> <!--style sign up in css as button-->
-    </div>
-    <footer>
-        <p>Copyright © The Odin Project 2023</p>
-    </footer>
-
-
+    </div> 
+    <footer class="footer"> 
+        <div class="call-to-action">
+            <div class="footer-sub">
+                <h4 class="action">Call to action! It's time!</h4>
+                <p>Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <button class="sign-up"><a href="index.html">Sign up</a></button>
+        </div>
+    </footer>  
+        <p class="copyright">Copyright © The Odin Project 2023</p>
 </body>
 </html>
