--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
     <footer class="footer"> 
         <div class="call-to-action">
             <div class="footer-sub">
-                <h4 class="action">Call to action! It's time!</h4>
-                <p>Sign up for our product by clicking that button right over there!</p>
+                <h3 class="action">Call to action! It's time!</h4>
+                <p class="action-subtext">Sign up for our product by clicking that button right over there!</p>
             </div>
             <button class="sign-up"><a href="index.html">Sign up</a></button>
         </div>
