Finished updating hero header section. To do: Review all code

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
       
      <div class="hero-header">
-        <div class="headlogo"><header><h4 class="headerlogo">Header Logo</h4></header>
+        <div class="nav-logo"><header><h4 class="headerlogo">Header Logo</h4></header>
          <ul>
             <li><a href="index.html">header link one</a></li>
             <li><a href="index.html">header link two</a></li>
-            <li><a href=index.html>header link three</a></li>
+            <li><a href='index.html'>header link three</a></li>
          </ul>
         </div>    
       <div class="hero-section">
@@ -23,7 +23,7 @@
                 <div class="hero-text"><p>This website has some subtext that goes here under the main title. It's smaller font and color is lower contrast</p></div>
                 <button class="sign-up"><a href="index.html">Sign up</a></button>
             </div>     
-        <img class="hero-image" src="./images/hero-night.jpg" alt="spectacular stars in the nights sky"/>    
+        <div class="right-container"><img class="hero-image" src="./images/hero-night.jpg" alt="spectacular stars in the nights sky"/></div>    
       </div>
     </div>
   
